--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -110,7 +110,7 @@
 
 @book{besnier_homme_2012,
 	address = {Paris},
-	title = {L'homme simplifié: le syndrome de la touche étoile},
+	title = {L'homme simplifié: {L}e syndrome de la touche étoile},
 	isbn = {978-2-213-66235-0},
 	shorttitle = {L'homme simplifié},
 	publisher = {Fayard},
@@ -954,7 +954,7 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 }
 
 @book{UNESCO1987, 
-	author = {UNESCO},
+	author = {\textsc{unesco}},
 	urldate = {2018-05-12},
 	url = {http://unesdoc.unesco.org/images/0007/000732/073286eo.pdf},
 	 title = {Management of Interpretation Services in the {United Nations} System. {{R}}eport of the {United Nations} Joint Inspection Unit},
