--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[output=book,modfonts,nonflat,collection,collectionchapter
 		,colorlinks,citecolor=brown
 % 		,draft
-%                 ,draftmode
+                ,draftmode
+                ,arseneau
 % 		,showindex
 	      % ,multiauthors
 	      % ,nobabel
