some changes in 05

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -146,10 +146,10 @@
 
 
 @misc{AIIC2000,
-	author 	    = {AIIC},
+	author 	    = {\textsc{aiic}},
 	title       = {Code for the use of new technologies in conference interpretation},
 	urldate        = {2017-10-31},
-	url = {http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf},
+	url = {http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting%20technologies.pdf},
 	year        = {2000}
 }
 
@@ -169,7 +169,7 @@
 }
 
 @techreport{ISO4043,
-	author = {{ISO 4043:2016}},
+	author = {{\scshape iso 4043:2016}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting – Mobile booths - Requirements},
 	type = {Standard},
@@ -177,7 +177,7 @@
 }
 
 @techreport{ISO2603,
-	author = {{ISO 2603:2016}},
+	author = {{\scshape iso 2603:2016}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting – Permanent booths – Requirements},
 	type = {Standard},
@@ -185,7 +185,7 @@
 }
 
 @techreport{ISO20109,
-	author = {{ISO 20109:2016}},
+	author = {{\scshape iso 20109:2016}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting - Equipment - Requirements},
 	type = {Standard},
@@ -193,7 +193,7 @@
 }
 
 @techreport{ISO20108,
-	author = {{ISO 20108:2016}},
+	author = {{\scshape iso 20108:2016}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting - Quality and transmission of sound and image input - Requirements},
 	type = {Standard},
@@ -1089,8 +1089,8 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 
 @misc{IoL2015, 
 	author = {{IoL Educational Trust}},
-	urldate = {2016-10-18},
-	url = {http://www.ciol.org.uk/sites/default/files/DPSI\%20Handbook\%20Oct-15.pdf}, 
+	urldate = {2018-11-21},
+	url = {https://www.ciol.org.uk/sites/default/files/Handbook-DPSI.pdf}, 
 	title = {Diploma in Public Service Interpreting: {{H}}andbook for candidates},
 	year = {2015}
 }
