--- a/langsci/langscibook.cls
+++ b/langsci/langscibook.cls
@@ -1067,15 +1067,39 @@
 
 %invert names of first author for citation on impressum page 
 
+\newcommand{\lsFirstAuthorFullName}{}%temporary, will be overwritten
+\newcommand{\lsFirstAuthorFirstName}{}%temporary, will be overwritten
+\newcommand{\lsFirstAuthorLastName}{}%temporary, will be overwritten
+\newcommand{\lsFirstAuthorString}{\lsFirstAuthorLastName, \lsFirstAuthorFirstName} %can be customized in localmetadata.tex
+\newcommand{\lsNonFirstAuthorsString}{}  %default, will be overwritten iff more than one author
+% \newcommand{\lsImpressionCitationAuthor}{\lsFirstAuthorString \lsNonFirstAuthorsString}
+
+
 \AtBeginDocument{
-  \makeatletter
-  \let\theauthor\@author 
-  \makeatother
+\makeatletter
+\let\theauthor\@author 
+\makeatother
+\renewcommand{\and}{NONLASTAND} %expand for easier checking. Might need to be undone later on
+\renewcommand{\lastand}{LASTAND} %expand for easier checking
+
+\IfSubStr{\theauthor}{NONLASTAND}{%2+authors
+  \renewcommand{\lsFirstAuthorFullName}{\StrBefore{\theauthor}{\and }}
+  \renewcommand{\lsFirstAuthorFirstName}{\StrBefore{\theauthor}{ }} 
+  \renewcommand{\lsFirstAuthorLastName}{\StrBetween{\theauthor}{ }{\and }}
+  \renewcommand{\lsNonFirstAuthorsString}{\and\StrBehind{\theauthor}{\and }} 
+  }{%else
+    \IfSubStr{\theauthor}{LASTAND}{%less than two authors, more than one
+    \renewcommand{\lsFirstAuthorFullName}{\StrBefore{\theauthor}{\lastand }}
+    \renewcommand{\lsFirstAuthorFirstName}{\StrBefore{\theauthor}{ }}
+    \renewcommand{\lsFirstAuthorLastName}{\StrBetween{\theauthor}{ }{\lastand }}
+    \renewcommand{\lsNonFirstAuthorsString}{\lastand\StrBehind{\theauthor}{\lastand }} 
+    }{%else exactly one author
+      \renewcommand{\lsFirstAuthorFirstName}{\StrBefore{\theauthor}{ }}
+      \renewcommand{\lsFirstAuthorLastName}{\StrBehind{\theauthor}{ }}
+      }
+    }  
 }
-\newcommand{\lsFirstAuthorFullName}{\StrBefore{\theauthor}{\and }}
-\newcommand{\lsFirstAuthorFirstName}{\StrBefore{\theauthor}{ }}
-\newcommand{\lsFirstAuthorLastName}{\StrBetween{\theauthor}{ }{\and }}
-\newcommand{\lsNonFirstAuthorsString}{\and\StrBehind{\theauthor}{\and }} 
+ 
 
 \newcommand{\lsImpressionCitationAuthor}{ 
 \lsFirstAuthorLastName, \lsFirstAuthorFirstName \lsNonFirstAuthorsString}
@@ -1106,10 +1130,10 @@ This title can be downloaded at:\\
 \newcommand{\ccby}{CC-BY}
 \ifx\lsCopyright\ccby
 Published under the Creative Commons Attribution 4.0 Licence (CC BY 4.0):
-http://creativecommons.org/licenses/by/4.0/
+http://creativecommons.org/licenses/by/4.0/ \includegraphics[height=.75em]{\logopath/ccby.eps}
 \else
 Published under the Creative Commons Attribution-NoDerivatives 4.0 Licence (CC BY-ND 4.0):
-http://creativecommons.org/licenses/by-nd/4.0/
+http://creativecommons.org/licenses/by-nd/4.0/ \includegraphics[height=.75em]{\logopath/ccbynd.eps}
 \fi
 
 \begin{tabular}{@{}l@{~}l}
@@ -1960,7 +1984,7 @@ width=.8\textwidth
   \includegraphics{\logopath langsci_spinelogo_nocolor.pdf}}%
   % \hspace{0.8em}%
   \hfill%
-  \parbox[b]{.87\textwidth}{\linespread{0.8}\lsChapterFooterSize\normalfont\lsCollectionPaperCitationText}}
+  \parbox[b]{.87\textwidth}{\linespread{0.8}\lsChapterFooterSize\normalfont\lsCollectionPaperCitationText \includegraphics[height=.75em]{\logopath/ccby.eps}}}
 \ifx\lsOutput\lsOutputPaper       % only if output==paper
 	\renewcommand{\lsCollectionPaperCitation}{Change with \string\papernote}
 \fi
