--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -171,7 +171,7 @@
 @techreport{ISO4043,
 	author = {{\scshape iso 4043:2016}},
 	institution = {International Organization for Standardization},
-	title = {Simultaneous interpreting – Mobile booths - Requirements},
+	title = {Simultaneous interpreting -- Mobile booths -- Requirements},
 	type = {Standard},
 	year = {2016}
 }
@@ -179,7 +179,7 @@
 @techreport{ISO2603,
 	author = {{\scshape iso 2603:2016}},
 	institution = {International Organization for Standardization},
-	title = {Simultaneous interpreting – Permanent booths – Requirements},
+	title = {Simultaneous interpreting -- Permanent booths -- Requirements},
 	type = {Standard},
 	year = {2016}
 }
@@ -187,7 +187,7 @@
 @techreport{ISO20109,
 	author = {{\scshape iso 20109:2016}},
 	institution = {International Organization for Standardization},
-	title = {Simultaneous interpreting - Equipment - Requirements},
+	title = {Simultaneous interpreting -- Equipment -- Requirements},
 	type = {Standard},
 	year = {2016}
 }
@@ -195,7 +195,7 @@
 @techreport{ISO20108,
 	author = {{\scshape iso 20108:2016}},
 	institution = {International Organization for Standardization},
-	title = {Simultaneous interpreting - Quality and transmission of sound and image input - Requirements},
+	title = {Simultaneous interpreting -- Quality and transmission of sound and image input -- Requirements},
 	type = {Standard},
 	year = {2016}
 }
