chapter footer size

--- a/localcommands.tex
+++ b/localcommands.tex
@@ -4,6 +4,8 @@
 \def\blx@maxline{77}
 \makeatother
 
+\renewcommand{\lsChapterFooterSize}{\footnotesize}
+
 %Commands from Conversion, to be deleted before publication
 \newcommand{\textstyleannotationreference}{}
 
