--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -169,7 +169,7 @@
 }
 
 @techreport{ISO4043,
-	author = {{\scshape iso 4043:2016}},
+	author = {{\textsc{iso 4043:2016}}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting -- Mobile booths -- Requirements},
 	type = {Standard},
@@ -177,7 +177,7 @@
 }
 
 @techreport{ISO2603,
-	author = {{\scshape iso 2603:2016}},
+	author = {{\textsc{iso 2603:2016}}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting -- Permanent booths -- Requirements},
 	type = {Standard},
@@ -185,7 +185,7 @@
 }
 
 @techreport{ISO20109,
-	author = {{\scshape iso 20109:2016}},
+	author = {{\textsc{iso 20109:2016}}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting -- Equipment -- Requirements},
 	type = {Standard},
@@ -193,7 +193,7 @@
 }
 
 @techreport{ISO20108,
-	author = {{\scshape iso 20108:2016}},
+	author = {{\textsc{iso 20108:2016}}},
 	institution = {International Organization for Standardization},
 	title = {Simultaneous interpreting -- Quality and transmission of sound and image input -- Requirements},
 	type = {Standard},
@@ -382,22 +382,29 @@
 @misc{AVIDICUS3,
 	urldate = {2018-05-12},
 	url = {http://wp.videoconference-interpreting.net/?page_id=154},
-	title = {{{AVIDICUS}} Project 3},
-	year = {2014-2016}
+	title = {{AVIDICUS 3} (2014--16)},
+	year={2014--2016},
+	author={{\textsc{avidicus} project}},
+	sortyear={2014}
 }
 
 @misc{AVIDICUS2,
 	urldate = {2018-05-12},
-	url = {http://wp.videoconference-interpreting.net/?page_id=13},
-	title = {{{AVIDICUS}} Project 2},
-	year = {2011-2013}
+	url = {http://wp.videoconference-interpreting.net/?page_id=16},
+	title = {{AVIDICUS} 2 (2011--13)},
+	year={2011--2013},
+	author={{\textsc{avidicus} project}},
+	sortyear={2011}
 }
 
 @misc{AVIDICUS1,
 	urldate = {2018-05-12},
 	url = {http://wp.videoconference-interpreting.net/?page_id=13},
-	title = {{{AVIDICUS}} Project 1},
-	year = {2008-2011}
+	title = {{AVIDICUS} 1 (2008--11)},
+	year={2008--2011},
+        author={{\textsc{avidicus} project}},
+	sortyear={2008}        
+        
 }
 
 @mastersthesis{Prandi2015a,
