--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[output=book,modfonts,nonflat,collection,collectionchapter
-		,colorlinks,citecolor=brown
+% 		,colorlinks,citecolor=brown
 % 		,draft
-                ,draftmode
+%                 ,draftmode
                 ,arseneau
 % 		,showindex
 	      % ,multiauthors
