minor name correction

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1650,10 +1650,11 @@ technologies. {{E}}xperiences from the {European Commission} {DG Interpretation}
 }
 
 @article{Bartlomiejczyk2007,
-	author = {Bartlomiejczyk, Magdalena},
+	author = {Bartłomiejczyk, Magdalena},
 	journal = {The Interpreter and Translator Trainer},
 	number = {2},
 	pages = {247--267},
+	sortname = {Bartlomiejczyk, Magdalena},
 	title = {Interpreting Quality as Perceived by Trainee Interpreters},
 	volume = {1},
 	year = {2007}
