--- a/backmatter.tex
+++ b/backmatter.tex
@@ -2,7 +2,7 @@
 \phantomsection%this allows hyperlink in ToC to work
 \addcontentsline{toc}{chapter}{Index} 
 \addcontentsline{toc}{section}{\lsNameIndexTitle}
-\ohead{Name \lsNameIndexTitle} 
+\ohead{\lsNameIndexTitle} 
 \printindex 
 \cleardoublepage
   
