--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -2,6 +2,7 @@
 \BackBody{Unlike other professions, the impact of information and communication technology on interpreting has been moderate so far. However, recent advances in the areas of remote, computer-assisted, and, most recently, machine interpreting, are gaining the interest of both researchers and practitioners. This volume aims at exploring key issues, approaches and challenges to the interplay of interpreting and technology, an area that is still underrepresented in the field of Interpreting Studies. The contributions to this volume cover topics in the area of computer-assisted and remote interpreting, both in the conference as well as in the court setting, and report on experimental studies.}
 \typesetter{Felix Kopecky}
 \proofreader{Amir Ghorbanpour\and Andreas Hölzl\and Bojana Đorđević\and Caroline Rossi\and Daniil Bondarenko\and Elen Le Foll\and Gerald Delahunty\and Ivica Jeđud\and Jeroen van de Weijer\and Katja Politt\and Jean Nitzke\and Paulson Skerrit\and Sarah Signer\and Trinka D'Cunha\lastand Viola Wiegand}
+\illustrator{Sebastian Nordhoff}
 \author{Claudio Fantinuoli}
 \BookDOI{10.5281/zenodo.1493281}%ask coordinator for DOI
 \renewcommand{\lsISBNdigital}{978-3-96110-161-0}
