--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 % 		,draft
 %                 ,draftmode
                 ,arseneau
-% 		,showindex
+		,showindex
 	      % ,multiauthors
 	      % ,nobabel
 		  ]{langsci/langscibook}                              
@@ -39,12 +39,12 @@
 %%%             Chapters                         %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
- \includepaper{chapters/00}
- \includepaper{chapters/01} 
- \includepaper{chapters/02} 
- \includepaper{chapters/03} 
- \includepaper{chapters/04}
- \includepaper{chapters/05} 
+ \includepaper{indexed/00}
+ \includepaper{indexed/01} 
+ \includepaper{indexed/02} 
+ \includepaper{indexed/03} 
+ \includepaper{indexed/04}
+ \includepaper{indexed/05} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%             Backmatter                       %%%
