Updates from ShareLaTeX

--- a/indexed/01.tex
+++ b/indexed/01.tex
@@ -37,7 +37,7 @@ There is a very broad consensus among interpreters that numbers are particularly
 
 Scholars have identified several reasons why interpreting numbers is a challenge. Numbers lack a conceptual representation \citep{Timarova2012,Seeber2015} and are, therefore, not embedded in a conceptual structure allowing interpreters to anticipate them. This lack of predictability of numbers is widely recognised as an obstacle to their interpretation \citep{Braun1996,Mazza2001,Pinochi2009,Mead2015}. Numbers are highly informative \citep{Alessandrini1990}, as every component of a number is a meaningful unit representing only one particular meaning. This prevents interpreters from using strategies such as paraphrasing or reformulation \citep{Pinochi2009}. Numbers also usually lack redundant material, which makes them more informative \citep{Gile1995,Seeber2015}. Source texts with high \isi{information density} are known to increase \isi{cognitive load} in interpreters. As hypothesized by \citet{Pinochi2009}, differences in number syntax between source and \isi{target language} can exacerbate this load, as interpreters not only have to render each numeral unit correctly but also swap the order of some of the units (e.g. between \ili{English} and \ili{German}).
 
-One of the universally recommended strategies is note-taking \citep{Setton1999,Jones2002,Mead2015}: interpreters are advised to stop the delivery of the target text as soon as they hear a number, write it down on a notepad in the booth and read it off while starting up the delivery again. The findings of \citet{Mazza2001} seem to support the hypothesis that interpreting is more accurate in cases where interpreters jotted down the number. Without a notepad, shortening the ear-voice span (\textsc{evs}) and changing the \isi{listening} strategy seem to be the most effective coping strategies: \citet{Setton1999}, for instance, observes that errors typically occur when the \textsc{evs} is more than 3--4 seconds. Following \citet{Seleskovitch1975}, \citet{Pinochi2009} advocates a switch from intelligent hearing, i.e. taking into account the context to draw inferences, to literal hearing, i.e. paying attention to the item in isolation.
+One of the universally recommended strategies is note-taking \citep{Setton1999,Jones2002,Mead2015}: interpreters are advised to stop the delivery of the target text as soon as they hear a number, write it down on a notepad in the booth and read it off while starting up the delivery again. The findings of \citet{Mazza2001} seem to support the hypothesis that interpreting is more accurate in cases where interpreters jotted down the number. Without a notepad, shortening the ear-voice span (\textsc{evs}) and changing the listening strategy seem to be the most effective coping strategies: \citet{Setton1999}, for instance, observes that errors typically occur when the \textsc{evs} is more than 3--4 seconds. Following \citet{Seleskovitch1975}, \citet{Pinochi2009} advocates a switch from intelligent hearing, i.e. taking into account the context to draw inferences, to literal hearing, i.e. paying attention to the item in isolation.
 
 Assistance by the booth colleague in writing down numbers and \isi{visual input} provided by the speakers, such as a copy of the speech to be used in the booth, or the projected presentation slides, are said to be beneficial \citep{Mead2015}. \citet{Lamberger-Felber2001} reports a significant increase of number and name accuracy (53\% to 68\% fewer errors, depending on the source speech) in an experiment when interpreters are provided the text of the speech in the booth, compared to when they do not have the text at their disposal. Accuracy is highest when, in addition, they are given time to prepare the text they are supplied with. It is to be noted, however, that this is the combined accuracy for numbers and names together. Even for the condition without text, high accuracy rates are obtained (mean of 85.7\%). This seems to suggest that names cause significantly fewer problems in simultaneous interpreting than numbers.\largerpage[-1]
 
@@ -45,9 +45,9 @@ While assistance and \isi{visual input} are likely to boost performance, they ar
 
 \section{Technology in interpreting}\largerpage[-1]
 
-Technology has always been essential to simultaneous interpreting, with audio \isi{equipment} and booth consoles providing the communication backbone for it to occur. More recently, remote interpreting has been making forays into the profession. \citet{Fantinuoli2018} categorizes these technologies as primarily setting-ori\-ented, since they determine the external conditions in which interpreting takes place. Process-oriented technologies, on the other hand, are designed to support the \isi{interpreter} in the various phases and processes of interpreting itself, e.g. for the acquisition, organization and retrieval of information, both before and during an assignment. Such technologies aim to directly influence the \isi{interpreting process}, its associated \isi{cognitive load} and the quality of its outcome. As such, they are the defining components of computer-assisted interpreting (\textsc{cai}).
+Technology has always been essential to simultaneous interpreting, with audio \isi{equipment} and booth consoles providing the communication backbone for it to occur. More recently, remote interpreting has been making forays into the profession. \citet{Fantinuoli2018} categorizes these technologies as primarily setting-ori\-ented, since they determine the external conditions in which interpreting takes place. Process-oriented technologies, on the other hand, are designed to support the \isi{interpreter} in the various phases and processes of interpreting itself, e.g. for the acquisition, organization and retrieval of information, both before and during an assignment. Such technologies aim to directly influence the \isi{interpreting process}, its associated \isi{cognitive load} and the quality of its outcome. As such, they are the defining components of \isi{computer-assisted interpreting} (\textsc{cai}).
 
-Currently, existing \textsc{cai} tools are mostly focused on \isi{terminological} support, whether in preparing for an assignment or for access in the booth. This focus is not surprising as domain-specific terms are an important obstacle to \isi{interpreting quality}, and \textsc{cai} tools have the potential of helping interpreters use them more accurately and consistently. Recent studies \citep{Will2015,Fantinuoli2017a,Costa2018} have surveyed existing \textsc{cai} tools for \isi{terminology management}, and determined relevant criteria to evaluate them. For a knowledge management tool to be practical in the booth, an important requirement is that it allows the \isi{interpreter} to access reference material quickly and with as little additional \isi{cognitive load} as possible. This can be achieved with good knowledge representation, clear presentation and ergonomic operation, and good search algorithms.
+Currently, existing \textsc{cai} tools are mostly focused on \isi{terminological support}, whether in preparing for an assignment or for access in the booth. This focus is not surprising as domain-specific terms are an important obstacle to \isi{interpreting quality}, and \textsc{cai} tools have the potential of helping interpreters use them more accurately and consistently. Recent studies \citep{Will2015,Fantinuoli2017a,Costa2018} have surveyed existing \textsc{cai} tools for \isi{terminology management}, and determined relevant criteria to evaluate them. For a knowledge management tool to be practical in the booth, an important requirement is that it allows the \isi{interpreter} to access reference material quickly and with as little additional \isi{cognitive load} as possible. This can be achieved with good knowledge representation, clear presentation and ergonomic operation, and good search algorithms.
 
 It is essential that relevant information can be retrieved fast, i.e. within the ear-voice span. Automatic Speech Recognition (\textsc{asr}) has the potential of speeding up the look-up process and solving the cognitive effort and latency of manual querying. Technological advances in the field have been rapid in recent years, especially since the introduction of neural networks \citep{Yu2016}. Given the current state of the art in \textsc{asr} and its foreseeable progress, it seems to be a matter of time before this technology is used in \textsc{cai} tools to support interpreters with \isi{terminology} look-up, and/or with information-dense content like numbers, as explored in \citet{Fantinuoli2017b}. This paper will focus on the latter of these aspects. 
 
@@ -122,7 +122,7 @@ Numbers are difficult to interpret, as the experimental results show. The averag
 
 When \isi{technological support} was made available, the performance on numbers improved dramatically. Average accuracy rose by 30 percentage points to 86.5\%, and the absolute number of errors dropped from 174 to 54 out of 400, an \isi{error reduction} of 69\%. This finding was fairly consistent with the 53--68\% decrease reported by \citet{Lamberger-Felber2001} for numbers and names, when copies of speeches were made available to the \isi{interpreter}. A paired t-test showed that the performance difference was highly significant for both source languages (p < 0.001). It should not come as a surprise that individuals that scored poorly without support benefit most from having it, at least in absolute terms of avoided errors (up to 21 fewer errors on 40 numbers). Interestingly, relative \isi{error reduction} was moderate (43\%) to high (90\%) regardless of a subject’s performance in the \isi{control setting}. In other words, even if an \isi{interpreter} was highly competent at conveying numbers without support, he or she was able to reduce their error rate significantly when support is available.
 
-It is obvious from these results that \textsc{cai} support for numbers has the potential of drastically reducing errors on numbers. Nevertheless, it needs to be emphasized that these results indicate the ceiling performance of what can be achieved with \isi{technological support}, or with a dedicated booth mate, for that matter. The tested \isi{mock-up system} has a minimal delay and its output is entirely accurate. With such a reliable system, the \isi{interpreter} can choose to reduce the \isi{listening} and memory efforts to focus more on production. Further research is required to test how an imperfect output would affect the distribution of effort.
+It is obvious from these results that \textsc{cai} support for numbers has the potential of drastically reducing errors on numbers. Nevertheless, it needs to be emphasized that these results indicate the ceiling performance of what can be achieved with \isi{technological support}, or with a dedicated booth mate, for that matter. The tested \isi{mock-up system} has a minimal delay and its output is entirely accurate. With such a reliable system, the \isi{interpreter} can choose to reduce the listening and memory efforts to focus more on production. Further research is required to test how an imperfect output would affect the distribution of effort.
 
 Feedback from the questionnaires indicated that all participants perceived the support as helpful. Three participants reported that it took some time to get used to the system, while for the others the transition was almost immediate. Two respondents were sometimes distracted by the system because it focused their attention on numbers at the expense of other content. Future evaluations should elucidate if distraction can be reduced with increased familiarity with number support, or different ways of providing it. Specifically, adding units (e.g. \textit{km} or \textit{percent}) or concepts to the numbers could be beneficial to recall their usage in context, although this may require cues that are specific to the \isi{source language}.
 
@@ -220,7 +220,7 @@ A total of 228 errors was observed in the experiment. \figref{fig:01:3} presents
 \caption{Error count per type in both experimental conditions\label{fig:01:3}}
 \end{figure}
 
-By far the most frequently occurring error is omission, regardless of the availability of \isi{technological support}. Technological support significantly reduces the number of omissions ($p < 0.05$), but omissions remain frequent and their relative weight in the total error load increases from 61 to 72\%. We see two possible explanations for this. Some numbers come in information-dense sections of a speech, and omitting them may be a necessity to limit \isi{cognitive load} or to avoid increasing \textsc{evs}. In such cases, even having the number available on screen would not help in reproducing it in context. Second, it could be that \isi{technological support} causes complacency or confusion when numbers are heard. If an \isi{interpreter} reduces the \isi{listening} effort and relies on a support system to receive the number, adequate context may be lacking to convey its meaning.
+By far the most frequently occurring error is omission, regardless of the availability of \isi{technological support}. Technological support significantly reduces the number of omissions ($p < 0.05$), but omissions remain frequent and their relative weight in the total error load increases from 61 to 72\%. We see two possible explanations for this. Some numbers come in information-dense sections of a speech, and omitting them may be a necessity to limit \isi{cognitive load} or to avoid increasing \textsc{evs}. In such cases, even having the number available on screen would not help in reproducing it in context. Second, it could be that \isi{technological support} causes complacency or confusion when numbers are heard. If an \isi{interpreter} reduces the listening effort and relies on a support system to receive the number, adequate context may be lacking to convey its meaning.
 
 Approximations are often used in the \isi{control setting}, but only when the source \isi{stimulus} was a decimal or a complex whole number. Approximating is a useful strategy when numbers have not been entirely understood, or when they are too large to fit in working memory. With the addition of \isi{technological support}, this strategy is used almost 10 times less often, since the tasks of comprehension and working memory are effectively solved. The \isi{error reduction} is significant at $p < 0.001$.
 
