--- a/indexed/04.tex
+++ b/indexed/04.tex
@@ -107,7 +107,7 @@ From a methodological viewpoint, this study was anchored within Actor-Net\-work 
 
 After obtaining ethical approval from the University of Salford to carry out the doctoral project, 1,150 prospective participants who were all members of the National Register of Public Service Interpreters (\textsc{nrpsi}) were contacted by email in 2014. Thirty-nine expressed an interest and, in the end, eighteen practising \isi{court} interpreters in England and Wales were interviewed. When applying \citegen{Seidman2006} principles of sufficiency and saturation of information, the number of participants was deemed sufficient. 
 
-In terms of participants’ profiles, there were sixteen women and two men sharing, between them, a wide range of language combinations (mainly European languages, but also \ili{Arabic}, Chinese, and \ili{Turkish}). All participants had a Diploma in Public Service Interpreting (\textsc{dpsi}), or equivalent, which at the time was a requirement to become a \isi{court interpreter}. Several participants had more than one qualification, and they often combined a \textsc{dpsi} with a degree or an MA in Languages or in Translation and Interpreting Studies. Most participants (twelve) had at least ten years’ experience in \isi{court} interpreting. Their experience in interpreting in \textsc{vci} was somehow more limited with most participants having interpreted on 10 or fewer occasions in \textsc{vci a} and/or \textsc{b}.  
+In terms of participants’ profiles, there were sixteen women and two men sharing, between them, a wide range of language combinations (mainly European languages, but also \ili{Arabic}, \ili{Chinese}, and \ili{Turkish}). All participants had a Diploma in Public Service Interpreting (\textsc{dpsi}), or equivalent, which at the time was a requirement to become a \isi{court interpreter}. Several participants had more than one qualification, and they often combined a \textsc{dpsi} with a degree or an MA in Languages or in Translation and Interpreting Studies. Most participants (twelve) had at least ten years’ experience in \isi{court} interpreting. Their experience in interpreting in \textsc{vci} was somehow more limited with most participants having interpreted on 10 or fewer occasions in \textsc{vci a} and/or \textsc{b}.  
 
 In line with the \textsc{ant}’s methodological stance, semi-structured interviews were conducted with the eighteen participants. The interview pointers were based on \tabref{tab:devaux:1} in order to ensure that enough information was collected so that a \isi{role-space model} could be drawn for each participant. The interviews were conducted either face-to-face or via \isi{Skype}.{\interfootnotelinepenalty=10000\footnote{For a more in-depth discussion on conducting interviews face-to-face or via \isi{Skype}, see \citet{Devaux2017b}.}} The recordings were then transcribed verbatim and coded using NVivo. The corpus gathered accounted for 12.5 hours of recording. 
 
@@ -249,7 +249,7 @@ P12 & Low & Very low & Equal & \multicolumn{2}{l}{Low to quite high}\\
 & \multicolumn{2}{c}{Presentation of self } & Participant Alignment & \multicolumn{2}{c}{Interaction management} \\ \cmidrule(lr){2-3}\cmidrule(lr){5-6}
 & Court & Defendant &  & Court & Defendant\\ \midrule
 
-\isi{P13} & Very low & Low & > Defendant and solicitor & Very low & Quite high\\
+P13 & Very low & Low & > Defendant and solicitor & Very low & Quite high\\
 P14 & Very low & Low & Equal & \multicolumn{2}{l}{Low to quite high} \\
 P17 & Very low & Low & Equal & \multicolumn{2}{l}{Low to high}\\
 \lspbottomrule
@@ -261,13 +261,13 @@ P17 & Very low & Low & Equal & \multicolumn{2}{l}{Low to high}\\
 
 The reasons justifying the above participants’ alignment are similar to those mentioned previously. Therefore, they will not be analysed again, and this sub-section will focus on their presentation of self and/or \isi{interaction management}.%%\largerpage[-2]
 
-In \textsc{vci a} and \textsc{vci b} their presentation of self was low with the \isi{co-located party}, and very low with the remote participant(s). They could introduce themselves as the \isi{court interpreter} with their \isi{co-located party}. However, they could not replicate the process with the \isi{remote party}, or even be sworn-in, for instance. Also, P12 raised some concerns on how she could be perceived as impartial by the \isi{defendant} in \textsc{vci a} as she was seen “on the same side” of the \isi{court}, and \isi{P13} thought it was more difficult to establish an atmosphere of trust with the participants in \isi{court} in \textsc{vci b}. Hence, their presentation was low with the \isi{co-located party} and very low with the remote participant(s).
+In \textsc{vci a} and \textsc{vci b} their presentation of self was low with the \isi{co-located party}, and very low with the remote participant(s). They could introduce themselves as the \isi{court interpreter} with their \isi{co-located party}. However, they could not replicate the process with the \isi{remote party}, or even be sworn-in, for instance. Also, P12 raised some concerns on how she could be perceived as impartial by the \isi{defendant} in \textsc{vci a} as she was seen “on the same side” of the \isi{court}, and P13 thought it was more difficult to establish an atmosphere of trust with the participants in \isi{court} in \textsc{vci b}. Hence, their presentation was low with the \isi{co-located party} and very low with the remote participant(s).
 
 P12 in \textsc{vci a}, and P14 and P17 in \textsc{vci b} perceived their \isi{interaction management} alongside a continuum ranging from low to quite high/high. Again, the reasons were similar to those for the participants above, so they will not be discussed here. 
 
-The \isi{interaction management} for P10 in \textsc{vci a} and \isi{P13} in \textsc{vci b} differed between the participants in \isi{court} and the \isi{remote defendant}/witness. P10 believed that the use of \textsc{vci} \isi{equipment} did not impact on his ability to manage the interaction with the participants in \isi{court}. Yet, P10’s \isi{interaction management} with the other side was lower as “giving the conversation a rhythm [had been] much more difficult” (P10) with the \isi{defendant}. Similarly, \isi{P13}’s \isi{interaction management} was very low with the participants in \isi{court}. Although he had encountered difficulties hearing parts of the \isi{court} interventions, he did not intervene to notify the participants in \isi{court} of the issue. Nevertheless, his \isi{interaction management} with the solicitor and the \isi{defendant} was quite high as they were sitting together, and he could attract their attention, and ask them for repetitions/clarification.
+The \isi{interaction management} for P10 in \textsc{vci a} and P13 in \textsc{vci b} differed between the participants in \isi{court} and the \isi{remote defendant}/witness. P10 believed that the use of \textsc{vci} \isi{equipment} did not impact on his ability to manage the interaction with the participants in \isi{court}. Yet, P10’s \isi{interaction management} with the other side was lower as “giving the conversation a rhythm [had been] much more difficult” (P10) with the \isi{defendant}. Similarly, P13’s \isi{interaction management} was very low with the participants in \isi{court}. Although he had encountered difficulties hearing parts of the \isi{court} interventions, he did not intervene to notify the participants in \isi{court} of the issue. Nevertheless, his \isi{interaction management} with the solicitor and the \isi{defendant} was quite high as they were sitting together, and he could attract their attention, and ask them for repetitions/clarification.
 
-As a result, these participants’ \isi{role-space model} was split, and their shapes differed greatly from the other participants, as illustrated by Figures~\ref{fig:devaux:5}~(P10), \ref{fig:devaux:6}~(P12), \ref{fig:devaux:7}~(\isi{P13}), \ref{fig:devaux:8}~(P14), and \ref{fig:devaux:9}~(P17). Worth noting is that P12 in \textsc{vci a} and P14 and P15 in \textsc{vci b} created two \textsc{3d} role-space models. In order to preserve their model’s readability, it was decided to split them into two graphs: one representing her \isi{role-space model} with the participants in \isi{court} (on the left hand-side), and one with the \isi{defendant} (on the right-hand side).
+As a result, these participants’ \isi{role-space model} was split, and their shapes differed greatly from the other participants, as illustrated by Figures~\ref{fig:devaux:5}~(P10), \ref{fig:devaux:6}~(P12), \ref{fig:devaux:7}~(P13), \ref{fig:devaux:8}~(P14), and \ref{fig:devaux:9}~(P17). Worth noting is that P12 in \textsc{vci a} and P14 and P15 in \textsc{vci b} created two \textsc{3d} role-space models. In order to preserve their model’s readability, it was decided to split them into two graphs: one representing her \isi{role-space model} with the participants in \isi{court} (on the left hand-side), and one with the \isi{defendant} (on the right-hand side).
 
   
 
